--- a/강혜진/Portfolio/index.html
+++ b/강혜진/Portfolio/index.html
@@ -68,6 +68,10 @@
                         <img src="./Images/Desktop-2/Contents/이미지/세부내용리스트1.png">
                         <img src="./Images/Desktop-2/Contents/Line 2.png">
                         <p>50,640,000 원</p>
+                        <div id="s2_contents_card_card1_button">
+                            <img src="./Images/Desktop-2/Contents/버튼/자세히보기.png">
+                            <img src="./Images/Desktop-2/Contents/버튼/견적내기.png">
+                        </div>
 
                     </div>   
                     <div id="s2_contents_card_card2">
@@ -75,7 +79,10 @@
                         <img src="./Images/Desktop-2/Contents/이미지/세부내용리스트2.png">
                         <img src="./Images/Desktop-2/Contents/Line 2.png">
                         <p>50,640,000 원</p>
-
+                        <div id="s2_contents_card_card2_button">
+                            <img src="./Images/Desktop-2/Contents/버튼/자세히보기.png">
+                            <img src="./Images/Desktop-2/Contents/버튼/견적내기.png">
+                        </div>
 
                     </div>   
                     <div id="s2_contents_card_card3">
@@ -83,9 +90,10 @@
                         <img src="./Images/Desktop-2/Contents/이미지/세부내용리스트3.png">
                         <img src="./Images/Desktop-2/Contents/Line 2.png">
                         <p>50,640,000 원</p>
-
-
-
+                        <div id="s2_contents_card_card3_button">
+                            <img src="./Images/Desktop-2/Contents/버튼/자세히보기.png">
+                            <img src="./Images/Desktop-2/Contents/버튼/견적내기.png">
+                        </div>
                     </div>   
 
                 </div>
@@ -102,12 +110,58 @@
 
         <!--세번째 페이지-->
         <section id="s3">
-
+            <div id="s3_header">
+                <p>News</p>
+            </div>
+            <div id="s3_contents">
+                <div id="s3_contents_left">
+                    <img src="./Images/Desktop-3/Contents/카드이미지.png">
+                    <img src="./Images/Desktop-3/Contents/버튼/버튼.png" id="button">
+                </div>
+                <div id="s3_contents_right">
+                    <img src="./Images/Desktop-3/Contents/뉴스이미지영역.png">    
+                </div>
+            </div>
+            <div id="s3_contents2">
+                <div id="s3_contents2_dt1">
+                    <p id="subtitle">뉴스</p>
+                    <p id="title">기아, ‘The 2024 니로 플러스’ 출시</p>
+                </div>
+                <div id="s3_contents2_dt2">
+                    <p id="subtitle">뉴스</p>
+                    <p id="title">기아, 호주오픈 연계 유소년 대상 사회공헌 활동 펼쳐</p>
+                </div>
+                <div id="s3_contents2_dt3">
+                    <p id="subtitle">공지</p>
+                    <p id="title">개인정보 처리방침 변경 안내(2023.02.16)</p>
+                </div>
+            </div>
+            <div id="s3_footer">
+                <img src="./Images/Desktop-3/Footer/아이콘/대화창2.png">
+                <img src="./Images/Desktop-3/Footer/아이콘/arrow_up.png">
+            </div>
         </section>
 
         <!--네번째 페이지-->
         <section id="s4">
-
+            <div id="s4_header">
+                <img src="./Images/Desktop-4/Header/image 5.png">
+                <img src="./Images/Desktop-4/Header/nav 선택라인.png">
+            </div>
+            <div id="s4_contents">
+                <p>이메일 로그인</p>
+                <img src="./Images/Desktop-4/Contents/이메일 입력창.png">
+                <img src="./Images/Desktop-4/Contents/비밀번호 입력창.png">
+                <img src="./Images/Desktop-4/Contents/버튼/버튼.png">
+            </div>
+            <div id="s4_footer">
+                <div id="s4_footer_button">
+                    <img src="./Images/Desktop-4/Footer/버튼/아이디 찾기.png" id="bt1">
+                    <img src="./Images/Desktop-4/Footer/버튼/비밀번호 초기화.png" id="bt2">
+                    <img src="./Images/Desktop-4/Footer/버튼/회원가입.png" id="bt3">
+                </div>
+                <img src="./Images/Desktop-4/Footer/nav 선택라인.png">
+            </div>
         </section>
 
     </body>
